tooltips by id and href

--- a/inst/css/tooltips.css
+++ b/inst/css/tooltips.css
@@ -2,7 +2,7 @@
 .tooltipping {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+    /* border-bottom: 1px dotted black; */ /* If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
